Wecare, menudropdown, nav, loginregister and fixednavwithsearch components made responsive. MenuDropdowns z-index is changed so it would be visible when scrolled and not closed

--- a/src/index.css
+++ b/src/index.css
@@ -109,3 +109,11 @@ code {
         opacity: 1;
     }
 }
+
+@media (max-width: 500px) {
+    @keyframes play {
+        100% {
+            background-position: -518px;
+        }
+    }
+}
